--- a/index.html
+++ b/index.html
@@ -16,30 +16,32 @@
 
     <link rel="icon" href="images/icon.png">
     <link href="css/style.css" rel="stylesheet">
-    <script href="js/script.js" defer></script>
+    <link href="css/body.css" rel="stylesheet">
+    <link href="css/section.css" rel="stylesheet">
+    <script defer src="js/script.js"></script>
 
     <title>Lista zadań</title>
 </head>
 
-<body>
-    <main class="container">
+<body class="body">
+    <main class="body__main">
         <header>
             <h1>Lista zadań</h1>
         </header>
 
-        <section class="section">
-            <h2 class="section__header">Dodaj nowe zadanie</h2>
-            <div class="section__body">
-                <form class="form js-form">
-                    <input class="form__input js-newTask" placeholder="Co jest do zrobienia?">
-                    <button class="form__button">Dodaj zadanie</button>
+        <section class="sectionAddingTask">
+            <h2 class="sectionAddingTask__color section__color">Dodaj nowe zadanie</h2>
+            <div>
+                <form class="section__color sectionAddingTask__inputField js-form">
+                    <input class="sectionAddingTask__height js-newTask js-clearField" autofocus placeholder="Co jest do zrobienia?">
+                    <button class="sectionAddingTask__button">Dodaj zadanie</button>
                 </form>
             </div>
         </section>
-        <section class="section">
-            <h2 class="section__header">Lista zadań</h2>
-            <div class="section__body">
-                <ul class="tasks js-tasks"></ul>
+        <section class="sectionTaskList">
+            <h2 class="sectionTaskList__color section__color">Lista zadań</h2>
+            <div class="section__color">
+                <ul class="sectionTaskList__tasks js-tasks"></ul>
             </div>
         </section>
     </main>
