mediaQueries 768px added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <h2 class="sectionAddingTask__color section__color">Dodaj nowe zadanie</h2>
             <div>
                 <form class="section__color sectionAddingTask__inputField js-form">
-                    <input class="sectionAddingTask__height js-newTask js-clearField" autofocus placeholder="Co jest do zrobienia?">
+                    <input class="sectionAddingTask__height js-newTask js-clearField" autofocus
+                        placeholder="Co jest do zrobienia?">
                     <button class="sectionAddingTask__button">Dodaj zadanie</button>
                 </form>
             </div>
