css files added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/body.css" rel="stylesheet">
     <link href="css/section.css" rel="stylesheet">
+    <link href="css/sectionAddingTask.css" rel="stylesheet">
+    <link href="css/sectionTaskList.css" rel="stylesheet">
     <script defer src="js/script.js"></script>
 
     <title>Lista zadań</title>
