--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
-
+    <meta property="og:image" content="images/share.jpg">
     <link rel="icon" href="images/icon.png">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/body.css" rel="stylesheet">
