--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap"
+        rel="stylesheet">
     <meta property="og:image" content="images/share2.jpg">
     <link rel="icon" href="images/icon.png">
     <link href="css/style.css" rel="stylesheet">
@@ -32,9 +37,9 @@
         </header>
 
         <section class="sectionAddingTask">
-            <h2 class="sectionAddingTask__color section__color">Dodaj nowe zadanie</h2>
+            <h2 class="section__headerWeight section__backgroundColor">Dodaj nowe zadanie</h2>
             <div>
-                <form class="section__color sectionAddingTask__inputField js-form">
+                <form class="section__backgroundColor sectionAddingTask__inputField js-form">
                     <input class="sectionAddingTask__height js-newTask js-clearField" autofocus
                         placeholder="Co jest do zrobienia?">
                     <button class="sectionAddingTask__button">Dodaj zadanie</button>
@@ -42,8 +47,8 @@
             </div>
         </section>
         <section class="sectionTaskList">
-            <h2 class="sectionTaskList__color section__color">Lista zadań</h2>
-            <div class="section__color">
+            <h2 class="section__headerWeight section__backgroundColor">Lista zadań</h2>
+            <div class="section__backgroundColor">
                 <ul class="sectionTaskList__tasks js-tasks"></ul>
             </div>
         </section>
