change 2 section and add 1 to style

--- a/index.html
+++ b/index.html
@@ -35,23 +35,21 @@
         <header>
             <h1>Lista zadań</h1>
         </header>
+        <section class="section">
+                <h2 class="section__headerWeight section__backgroundColor">Dodaj nowe zadanie</h2>
+                <div>
+                    <form class="section__backgroundColor sectionAddingTask__inputField js-form">
+                        <input class="sectionAddingTask__height js-newTask" autofocus
+                            placeholder="Co jest do zrobienia?">
+                        <button class="sectionAddingTask__button">Dodaj zadanie</button>
+                    </form>
+                </div>
+                <h2 class="section__headerWeight section__backgroundColor">Lista zadań</h2>
+                <div class="section__backgroundColor">
+                    <ul class="sectionTaskList__tasks js-tasks"></ul>
+                </div>
+        </section>
 
-        <section class="sectionAddingTask">
-            <h2 class="section__headerWeight section__backgroundColor">Dodaj nowe zadanie</h2>
-            <div>
-                <form class="section__backgroundColor sectionAddingTask__inputField js-form">
-                    <input class="sectionAddingTask__height js-newTask js-clearField" autofocus
-                        placeholder="Co jest do zrobienia?">
-                    <button class="sectionAddingTask__button">Dodaj zadanie</button>
-                </form>
-            </div>
-        </section>
-        <section class="sectionTaskList">
-            <h2 class="section__headerWeight section__backgroundColor">Lista zadań</h2>
-            <div class="section__backgroundColor">
-                <ul class="sectionTaskList__tasks js-tasks"></ul>
-            </div>
-        </section>
     </main>
 </body>
 
