--- a/index.html
+++ b/index.html
@@ -44,7 +44,15 @@
                         <button class="sectionAddingTask__button">Dodaj zadanie</button>
                     </form>
                 </div>
-                <h2 class="section__headerWeight section__backgroundColor">Lista zadań</h2>
+
+
+                <div class="section__buttonTaskList">
+                    <h2 class="section__headerWeight">Lista zadań</h2>
+                    <button class="section__taskListHeaderButton js-taskHideDoneButton">Ukryj ukończone</button>
+                    <button class="section__taskListHeaderButton js-taskCheckedAllButton">Ukończ wszystkie</button>
+                </div>
+
+
                 <div class="section__backgroundColor">
                     <ul class="sectionTaskList__tasks js-tasks"></ul>
                 </div>
