--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
 
 
-                <div class="section__buttonTaskList">
+                <div class="section__buttonTaskList js-buttons">
                     <h2 class="section__headerWeight">Lista zadań</h2>
                     <button class="section__taskListHeaderButton js-taskHideDoneButton">Ukryj ukończone</button>
                     <button class="section__taskListHeaderButton js-taskCheckedAllButton">Ukończ wszystkie</button>
